# sfml_template

./: .clang-format  .ycm_extra_conf.py  CMakeLists.txt
includes/utils/: channel.h  tools.h
src/: main.cpp
